Update about text and some responsive layout issues

--- a/docs/css/freelancer.css
+++ b/docs/css/freelancer.css
@@ -465,6 +465,6 @@ footer .footer-below {
 }
 
 .img-profile {
-    margin-bottom: 5px;
+    margin: 5px;
     border: 2px solid #FF8300;
 }
